--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -4,9 +4,7 @@
     margin: 0 auto
 }
 
-nav a {
-    text-align: center; 
-}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center; 
 }
@@ -16,4 +14,89 @@ nav a {
 
 main section {
     text-align: center; 
+}
+
+
+#background {
+    height: 725px;
+}
+
+body {
+    background-color: #0F98FA;
+}
+header {
+  background-color: #435745;
+
+}
+nav a:hover {
+    background-color: #BFBFBF;
+    color:#0F98FA;
+}
+.book, .join {
+    background-color: #989C94; 
+    text-decoration: none
+    color:#0F98FA;
+}
+.book:hover, .join:hover {
+    background-color: #989C94;
+    color:#435745;
+}
+#background {
+    background-color: #0F98FA;
+}
+.msg {
+    background-color: #0F98FA;
+}
+
+footer {
+  background-color: #435745;
+  color:#0F98FA;
+}
+
+nav a {
+    color:#BFBFBF;
+    text-align: center; 
+    text-decoration: none;
+}
+
+.home-title {
+    color:#0F98FA;
+}
+
+h4 {
+    color:#0F98FA;
+}
+
+.msg h2 {
+    color:#0F98FA;
+}
+
+.msg p {
+    color:#435745;
+}
+
+footer a {
+    color: #435745;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #BFBFBF;
+    text-decoration: underline;
+}
+
+footer p {
+    font-size: 1.2em;
+}
+
+.logo {
+    width: 80px;
+}
+
+.icon {
+    width: 80px;
+}
+
+#hero-img {
+    width: 80px;
 }
