testing fonts again

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,3 +1,4 @@
+@import url(''https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@500&family=Archivo:wght@900&display=swap'');
 
 #content {
     max-width: 1600px;
@@ -22,8 +23,8 @@ main section {
 }
 
 body {
-    background-color: #0F98FA;
-}
+#
+
 header {
   background-color: #435745;
 
