--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .home-title {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Helvetica, Verdana, Arial;
 }
 
 header {
