--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .home-title {
-    font-family: Helvetica, Verdana, Arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -67,7 +67,7 @@ nav a {
 }
 
 .home-title {
-    color:#0F98FA;
+    color:#BFBFBF;
 }
 
 h4 {
