--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,5 +1,3 @@
-@import url(''https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@500&family=Archivo:wght@900&display=swap'');
-
 #content {
     max-width: 1600px;
     margin: 0 auto
@@ -25,10 +23,12 @@ main section {
 body {
     background-color: #0F98FA;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 22px;
 }
 
 .home-title {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
 }
 
 header {
