--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -72,16 +72,16 @@ nav a {
 }
 
 h4 {
-    color:#0F98FA;
+    color:#BFBFBF;
 }
 
 .msg h2 {
-    color:#0F98FA;
+    color:#BFBFBF;
 }
 
 .msg p {
     color:#435745;
-    font-size: 8em;
+    font-size: .8em;
 }
 
 footer a {
