--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -53,7 +53,7 @@ nav a:hover {
     background-color: #0F98FA;
 }
 .msg {
-    line-height: 1.5em;
+    line-height: 400px;
     background-color: #BFBFBF;
 }
 
