--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -24,6 +24,8 @@ body {
     background-color: #0F98FA;
     font-family: 'Courier New', Courier, monospace;
     font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 .home-title {
@@ -54,6 +56,7 @@ nav a:hover {
 }
 .msg {
     background-color: #BFBFBF;
+    line-height: 1.5em;
 }
 
 footer {
