--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -25,13 +25,17 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 22px;
     margin: 0;
-    
+
     padding: 0;
 }
 
 .home-title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
@@ -47,6 +51,7 @@ nav a:hover {
     text-decoration: none;
     color: #0F98FA;
     font-size: 18px;
+    padding: 15px 30px;
 }
 .book:hover, .join:hover {
     background-color: #989C94;
@@ -58,17 +63,20 @@ nav a:hover {
 .msg {
     background-color: #BFBFBF;
     line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
   background-color: #435745;
   color:#0F98FA;
+  padding: 25px 50px;
 }
 
 nav a {
     color:#BFBFBF;
     text-align: center; 
     text-decoration: none;
+    padding: 35px;
 }
 
 .home-title {
@@ -88,6 +96,7 @@ h4 {
     color:#435745;
     font-size: .8em;
     line-height: 1.5em;
+    padding-bottom: 15px;
 }
 
 footer a {
@@ -110,8 +119,17 @@ footer p {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
     width: 80px;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
