--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -32,6 +32,7 @@ body {
 .home-title {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
+    margin-top: 10px;
 }
 
 h2 {
@@ -52,6 +53,8 @@ nav a:hover {
     color: #0F98FA;
     font-size: 18px;
     padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: #989C94;
@@ -132,4 +135,17 @@ footer p {
 
 footer .social img {
     padding-top: 15px;
+    margin-top: 200px;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #BFBFBF;
+}
+
+main section img {
+    box-sizing: border-box;
 }
