--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,6 +1,6 @@
 #content {
     max-width: 1600px;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 
@@ -25,7 +25,6 @@ body {
     font-family: 'Courier New', Courier, monospace;
     font-size: 22px;
     margin: 0;
-
     padding: 0;
 }
 
