--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -69,9 +69,10 @@ nav a:hover {
 }
 
 footer {
-  background-color: #435745;
-  color:#0F98FA;
-  padding: 25px 50px;
+    margin-top: 200px;
+    background-color: #435745;
+    color:#0F98FA;
+    padding: 25px 50px;
 }
 
 nav a {
