--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -18,6 +18,7 @@ main section {
 
 #background {
     height: 725px;
+    
 }
 
 body {
@@ -32,6 +33,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2em;
     margin-top: 10px;
+             
 }
 
 h2 {
@@ -40,6 +42,8 @@ h2 {
 
 header {
   background-color: #435745;
+  display: grid;
+  grid-template-columns: 150px auto;
 
 }
 nav a:hover {
@@ -66,6 +70,7 @@ nav a:hover {
     background-color: #BFBFBF;
     line-height: 1.5em;
     padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
@@ -73,6 +78,9 @@ footer {
     background-color: #435745;
     color:#0F98FA;
     padding: 25px 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 nav a {
@@ -104,7 +112,7 @@ h4 {
 }
 
 footer a {
-    color: #435745;
+    color: #BFBFBF;
     text-decoration: none;
     
 }
@@ -133,6 +141,9 @@ footer p {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+    
 }
 
 footer .social img {
@@ -146,8 +157,133 @@ footer .social img {
 
 .card-img {
     border: 10px solid #BFBFBF;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 main section img {
     box-sizing: border-box;
 }
+
+nav {
+    display: flex;
+    justify-content: space-around;
+} 
+
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h4 {
+    color: white;
+}
+
+.home-title {
+    color: white;
+} 
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 10fr;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+ 
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 6/8;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
+
