--- a/doctrinesearcher/styles/site-plan.css
+++ b/doctrinesearcher/styles/site-plan.css
@@ -8,22 +8,23 @@ Fonts are separated by a | */
   /* change the values below to your colors from your palette */
   --primary-color: #0E44C2;
   --secondary-color: #E2B328;
-  --accent1-color: #A09CE7;
-  --accent2-color: #FFFFFF;
+  --accent1-color: #000970;
+  --accent2-color: #d7deff;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Archivo', arial;
   --paragraph-font: 'Archivo+Narrow', sans-serif;
+  
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #0E44C2;  /* headlines on a white background */ 
-  --headline-color-on-color: FFFFFF; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #0E44C2; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #A09CE7  ;
-  --nav-link-color: #0E44C2;
-  --nav-background-color: #E2B328;
-  --nav-hover-link-color: #FFFFFF;
+  --headline-color-on-white: #000000;  /* headlines on a white background */ 
+  --headline-color-on-color: #E2B328; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #E2B328; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #d7deff  ;
+  --nav-link-color: #E2B328;
+  --nav-background-color: #0E44C2;
+  --nav-hover-link-color: #0E44C2;
   --nav-hover-background-color: #E2B328;
 }
 
