--- a/doctrinesearcher/styles/styles.css
+++ b/doctrinesearcher/styles/styles.css
@@ -147,3 +147,26 @@ h1 {
     width: 800px;
     margin-left: 50px;
 }
+
+
+
+
+
+
+
+
+
+
+.guide-paragraph-two {
+    font-size: 35px;
+    grid-column: 4;
+    margin-right: 50px;
+    color: black;
+}
+
+.guide-paragraph-one {
+    font-size: 35px;
+    grid-column: 4;
+    margin-right: 50px;
+    color: black;
+}
