--- a/doctrinesearcher/styles/styles.css
+++ b/doctrinesearcher/styles/styles.css
@@ -151,7 +151,12 @@ h1 {
 
 
 
+.first-content-box-article {
+    display:grid;
+    grid-column: 1fr 1fr 1fr 1fr;
+    grid-row: 1fr 1fr 1fr 1fr;
 
+}
 
 .guide-paragraph-two {
     font-size: 35px;
@@ -160,9 +165,95 @@ h1 {
     color: black;
 }
 
+.paragraph-top {
+    grid-column: 1/8;
+    grid-row:2;
+    font-size: 35px;
+    margin-left: 50px;
+}
+
 .guide-paragraph-one {
     font-size: 35px;
-    grid-column: 4;
+    grid-column: 1;
+    grid-row:8;
     margin-right: 50px;
     color: black;
+}
+
+.article-paragraph-one {
+    grid-column: 1;
+    grid-row: 2;
+    font-size: 35px;
+    margin-left: 50px;
+    margin-top: 235px;
+    color: black;
+    
+}
+
+
+.paragraph-bottom {
+    font-size:35px;
+    grid-row: 2;
+    grid-column: 1/8;
+    margin-left: 50px;
+    margin-top: 715px;
+    z-index: 1;
+}
+
+
+.first-article-image {
+    grid-row: 2;
+    grid-column: 4;
+    margin-right: 50px;
+    margin-top: 210px;
+    width: auto;
+    float:right;
+    
+}
+
+.article-h1 {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.article-h2 {
+    grid-row: 1;
+    grid-column: 1;
+    margin-left: 50px;
+}
+
+
+
+
+
+
+
+.second-article-paragraph-one {
+    grid-column: 1;
+    grid-row: 2;
+    font-size: 35px;
+    margin-left: 50px;
+    margin-top: 35px;
+    color: black;
+    
+}
+
+
+.second-paragraph-bottom {
+    font-size:35px;
+    grid-row: 2;
+    grid-column: 1/8;
+    margin-left: 50px;
+    margin-top: 515px;
+    z-index: 1;
+}
+
+.wedding-bands-image {
+    grid-row: 2;
+    grid-column: 4;
+    margin-right: 50px;
+    margin-top: 10px;
+    width: auto;
+    float:right;
+   
 }
