--- a/doctrinesearcher/styles/styles.css
+++ b/doctrinesearcher/styles/styles.css
@@ -153,8 +153,8 @@ h1 {
 
 .first-content-box-article {
     display:grid;
-    grid-column: 1fr 1fr 1fr 1fr;
-    grid-row: 1fr 1fr 1fr 1fr;
+    grid-column: 1fr;
+    grid-row: 1fr;
 
 }
 
